--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <div id="randomNumber"></div>
       <div id="itog"></div>
       <div id="resultDiv"></div>
+      <footer>
+        <p>Создатель сайта <b>Донийорбек</b></p>
+      </footer>
     </div>
     <script src="./app.js" defer></script>
   </body>
