--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 75vh;
       }
       .result {
         border-radius: 20px;
