--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background: black;
         color: white;
         font-size: 20px;
+        height: 100%;
       }
       button {
         border-radius: 5px;
@@ -27,6 +28,9 @@
       }
       .containerBodyTitle {
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 auto;
       }
       .buttonContainer {
         display: flex;
@@ -59,39 +63,97 @@
       .footerText {
         color: blueviolet;
       }
+      .container {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+      .wrapper {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+      .main {
+        flex: 1 1 auto;
+      }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="containerBody">
-        <h3 class="containerBodyTitle">Камень-Ножницы-Бумага</h3>
-        <div class="buttonContainer">
-          <button id="kamen">
-            <img
-              id="kamenImg"
-              src="./imgIcon/icons8-будь-мужиком,-блеать-48.png"
-            />
-          </button>
+    <!-- <div class="container">
+      <div class="main">
+        <div class="containerBody">
+          <h3 class="containerBodyTitle">Камень-Ножницы-Бумага</h3>
+          <div class="buttonContainer">
+            <button id="kamen">
+              <img
+                id="kamenImg"
+                src="./imgIcon/icons8-будь-мужиком,-блеать-48.png"
+              />
+            </button>
 
-          <button id="nojnitsa">
-            <img src="./imgIcon/icons8-рука-ножницы-тип-кожи-2-48.png" />
-          </button>
+            <button id="nojnitsa">
+              <img src="./imgIcon/icons8-рука-ножницы-тип-кожи-2-48.png" />
+            </button>
 
-          <button id="bumaga">
-            <img
-              id="imgBumaga"
-              src="./imgIcon/icons8-вся-рука-48.png"
-              alt="imgSrcBumaga"
-            />
-          </button>
+            <button id="bumaga">
+              <img
+                id="imgBumaga"
+                src="./imgIcon/icons8-вся-рука-48.png"
+                alt="imgSrcBumaga"
+              />
+            </button>
+          </div>
+          <div class="resultBody">
+            <div id="randomNumber" class="randomNumber"></div>
+            <div id="itog" class="randomNumber"></div>
+          </div>
+          <div id="resultDiv" class="result"></div>
         </div>
-        <div class="resultBody">
-          <div id="randomNumber" class="randomNumber"></div>
-          <div id="itog" class="randomNumber"></div>
-        </div>
-        <div id="resultDiv" class="result"></div>
       </div>
+
       <footer>
+        <p class="footerText">
+          Создатель игры: <b style="color: white">Донийорбек</b>
+        </p>
+        <p class="footerText">
+          Тестировщик: <b style="color: white">Отабек</b>
+        </p>
+      </footer>
+    </div> -->
+    <div class="wrapper">
+      <header class="header">
+        <h3 class="containerBodyTitle">Камень-Ножницы-Бумага</h3>
+      </header>
+      <main class="main">
+        <div class="containerBody">
+          <div class="buttonContainer">
+            <button id="kamen">
+              <img
+                id="kamenImg"
+                src="./imgIcon/icons8-будь-мужиком,-блеать-48.png"
+              />
+            </button>
+
+            <button id="nojnitsa">
+              <img src="./imgIcon/icons8-рука-ножницы-тип-кожи-2-48.png" />
+            </button>
+
+            <button id="bumaga">
+              <img
+                id="imgBumaga"
+                src="./imgIcon/icons8-вся-рука-48.png"
+                alt="imgSrcBumaga"
+              />
+            </button>
+          </div>
+          <div class="resultBody">
+            <div id="randomNumber" class="randomNumber"></div>
+            <div id="itog" class="randomNumber"></div>
+          </div>
+          <div id="resultDiv" class="result"></div>
+        </div>
+      </main>
+      <footer class="footer">
         <p class="footerText">
           Создатель игры: <b style="color: white">Донийорбек</b>
         </p>
