--- a/index.html
+++ b/index.html
@@ -79,47 +79,6 @@
     </style>
   </head>
   <body>
-    <!-- <div class="container">
-      <div class="main">
-        <div class="containerBody">
-          <h3 class="containerBodyTitle">Камень-Ножницы-Бумага</h3>
-          <div class="buttonContainer">
-            <button id="kamen">
-              <img
-                id="kamenImg"
-                src="./imgIcon/icons8-будь-мужиком,-блеать-48.png"
-              />
-            </button>
-
-            <button id="nojnitsa">
-              <img src="./imgIcon/icons8-рука-ножницы-тип-кожи-2-48.png" />
-            </button>
-
-            <button id="bumaga">
-              <img
-                id="imgBumaga"
-                src="./imgIcon/icons8-вся-рука-48.png"
-                alt="imgSrcBumaga"
-              />
-            </button>
-          </div>
-          <div class="resultBody">
-            <div id="randomNumber" class="randomNumber"></div>
-            <div id="itog" class="randomNumber"></div>
-          </div>
-          <div id="resultDiv" class="result"></div>
-        </div>
-      </div>
-
-      <footer>
-        <p class="footerText">
-          Создатель игры: <b style="color: white">Донийорбек</b>
-        </p>
-        <p class="footerText">
-          Тестировщик: <b style="color: white">Отабек</b>
-        </p>
-      </footer>
-    </div> -->
     <div class="wrapper">
       <header class="header">
         <h3 class="containerBodyTitle">Камень-Ножницы-Бумага</h3>
@@ -155,7 +114,10 @@
       </main>
       <footer class="footer">
         <p class="footerText">
-          Создатель игры: <b style="color: white">Донийорбек</b>
+          Создатель игры:
+          <b style="color: white"
+            >Донийорбек <span class="span">Abdurasulov</span></b
+          >
         </p>
         <p class="footerText">
           Тестировщик: <b style="color: white">Отабек</b>
