--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
       <main class="main">
         <div class="containerBody">
           <div class="buttonContainer">
-            <button id="kamen">
+            <button id="Rock">
               <img
                 id="kamenImg"
                 src="./imgIcon/icons8-будь-мужиком,-блеать-48.png"
               />
             </button>
 
-            <button id="nojnitsa">
+            <button id="Paper">
               <img src="./imgIcon/icons8-рука-ножницы-тип-кожи-2-48.png" />
             </button>
 
-            <button id="bumaga">
+            <button id="Scissors">
               <img
                 id="imgBumaga"
                 src="./imgIcon/icons8-вся-рука-48.png"
@@ -106,18 +106,19 @@
             </button>
           </div>
           <div class="resultBody">
-            <div id="randomNumber" class="randomNumber"></div>
-            <div id="itog" class="randomNumber"></div>
+            <div id="computerClickPlay" class="randomNumber"></div>
+            <div id="userClickPlay" class="randomNumber"></div>
           </div>
-          <div id="resultDiv" class="result"></div>
+          <div id="resultGame" class="randomNumber"></div>
+          <div class="bodyCheckContainer">
+            <button id="сheck">Счёт 0</button>
+            <button id="tie">Ничья</button>
+          </div>
         </div>
       </main>
       <footer class="footer">
         <p class="footerText">
-          Создатель игры:
-          <b style="color: white"
-            >Донийорбек <span class="span">Abdurasulov</span></b
-          >
+          Создатель игры: <b style="color: white">Донийорбек</b>
         </p>
         <p class="footerText">
           Тестировщик: <b style="color: white">Отабек</b>
