--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           <div class="youWinGame" id="youWin"></div>
         </div>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footerText">Создатель игры: Дониёрбек.</p>
+      </footer>
     </div>
     <script src="./app.js" defer></script>
   </body>
